--- a/test/fixtures/blocks.yml
+++ b/test/fixtures/blocks.yml
@@ -1,11 +1,11 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  type: 
-  size: 1
+  block_type: MyString
   support_type: MyString
+  block_size: 1
 
 two:
-  type: 
-  size: 1
+  block_type: MyString
   support_type: MyString
+  block_size: 1
